# pkg/docs/swagger.json
@@ -9,27 +9,6 @@
     },
     "paths": {
         "/book": {
-            "get": {
-                "description": "Get Book",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Book"
-                ],
-                "summary": "Get Book",
-                "responses": {
-                    "200": {
-                        "description": "Hello Book Service",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "Create Book",
                 "consumes": [
@@ -62,6 +41,29 @@
                     },
                     "400": {
                         "description": "Book already exists",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/books": {
+            "get": {
+                "description": "Get Book",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Book"
+                ],
+                "summary": "Get Books",
+                "responses": {
+                    "200": {
+                        "description": "Hello Book Service",
                         "schema": {
                             "type": "string"
                         }
